# OpusCleaner

./: .dockerignore  .gitignore  Dockerfile  README.md  build_frontend.py  categories.py  col.py  config.py  datasets.py  download.py  dump-opusfilter-schema.py  dump-parameter-schema.py  main.py  mtdata-stuff.py  opusfilter_compat.py  placeholders.py  pyproject.toml  requirements-all.txt  requirements.txt  run.py  sample.py  threshold.py
.github/workflows/: generate-frontend.yml  release.yaml
filters/: CharacterScoreFilter.json  HtmlTagFilter.json  LanguageIDFilter.json  LengthFilter.json  LengthRatioFilter.json  LongWordFilter.json  NonZeroNumeralsFilter.json  TerminalPunctuationFilter.json  alpha_ratio.json  alpha_ratio.py  avg_word_length.json  avg_word_length.py  bicleaner_all_hardrules.json  bicleaner_all_hardrules.py  bicleaner_hardrules.json  bifixer.json  bifixer_dedupe.py  char_script_score.json  char_script_score.py  clean_common.py  deescape-special-chars.json  deescape_tsv.py  desegment_chinese.json  desegment_chinese.py  detokenizer.json  fasttext_filter.py  fix_elitr_eca.json  fix_elitr_eca.py  fix_un_chinese.py  fix_wiki.json  fix_wiki.py  langid.json  langid.py  language_filter.json  language_filter.py  laser_similarity.json  laser_similarity.py  max_length.json  max_length.py  max_word_length.json  (+29 more)
filters/descriptors/: fix_elitr_eca.json  src_trg_ratio.json
filters/opusfilter/: AverageWordLengthFilter.json  CharacterScoreFilter.json  RegExpSub.json  opusfilter-ersatz.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  diff.js  format.js  hacks.js  hash.js  interval.js  stream.js
frontend/src/assets/: main.css
frontend/src/components/: CategoryPicker.vue  Checkbox.vue  DownloadPopup.vue  FilterEditor.vue  FilterOutputTable.vue  FilterStep.vue  InlineDiff.vue  LoadingIndicator.vue  Modal.vue  SegmentedControl.vue  TagsEditor.vue
frontend/src/components/parameters/: BoolParameter.vue  FloatParameter.vue  IntParameter.vue  ListParameter.vue  StringParameter.vue  TupleParameter.vue
frontend/src/css/: categories.css  navbar.css  property-list.css
frontend/src/router/: index.js
frontend/src/store/: categories.js  datasets.js  downloads.js  fetch.js  filters.js  filtersteps.js
frontend/src/views/: AddDatasetView.vue  EditFiltersView.vue  EditFiltersYamlView.vue  ListDatasetsView.vue
opuscleaner/: __about__.py  _util.py  categories.py  clean.py  col.py  config.py  datasets.py  download.py  filtering.py  filters.py  logging.py  opusfilter_compat.py  sample.py  server.py  threshold.py  trace.py
opuscleaner/filters/: alpha_ratio.json  alpha_ratio.py  bicleaner_hardrules.json  bifixer.json  bifixer_dedupe.py  clean_common.py  currency_mismatch.json  currency_mismatch.py  deescape_tsv.json  deescape_tsv.py  detokenizer.json  fasttext_filter.json  fasttext_filter.py  fix_elitr_eca.py  fix_quotes.json  fix_quotes.py  fix_sent_final_punct.json  fix_sent_final_punct.py  fix_un_chinese.json  fix_un_chinese.py  fix_wiki.py  langid.json  langid.py  langid_heliport.json  langid_heliport.py  laser_similarity.json  laser_similarity.py  max_length.json  max_length.py  max_word_length.json  max_word_length.py  normalize_whitespace.json  normalize_whitespace.py  num_mismatch.json  num_mismatch.py  regexp.json  remove_empty_lines.json  remove_empty_lines.py  remove_frequent_patterns.json  remove_frequent_patterns.py  (+14 more)
opuscleaner/filters/opusfilter/: AlphabetRatioFilter.json  CharacterScoreFilter.json  Detokenizer.json  HtmlTagFilter.json  LengthFilter.json  LengthRatioFilter.json  RegExpFilter.json  RegExpSub.json  Tokenizer.json  WhitespaceNormalizer.json  opusfilter-ersatz.py
opuscleaner/scripts/: build_chars.py
placeholders/: README.md  placeholders.py  test.sh  test_encode_output
placeholders/static/: config.yml  test_decode_output  test_encode_input  test_encode_input_strict
static/: dataset-editor.js  filter-editor.css  filter-editor.js  filterlist.js  index.html  inlinediff.js  placeholder_config.yaml
static/placeholder-stuff/: README.md  config.yaml  config.yml  test_encode_input  test_encode_output
test/: test_clean.py  test_col.py
test/deeper/filters/: fail.json
trainer/: README.md  random.sh  shuffle.py  test.py  train_config.yml  train_config_bgen.yml  trainer.py  trainer_test.py  trainer_test.yml  vocab_and_placehold.sh
trainer/test/data/: clean  dirty  medium
utils/: frontend_build_hook.py
utils/dedup/: README.md  dedup.sh  hash-seg.py  superdedup.py
