[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "opuscleaner"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "Jelmer van der Linde", email = "jelmer@ikhoefgeen.nl" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
opuscleaner-server = "opuscleaner.server:main"
opuscleaner-clean = "opuscleaner.clean:main"
opuscleaner-col = "opuscleaner.col:main"
opuscleaner-threshold = "opuscleaner.threshold:main"
opuscleaner-sample = "opuscleaner.sample:main"
opuscleaner-datasets = "opuscleaner.datasets:main"
opuscleaner-download = "opuscleaner.download:main"

[project.urls]
Documentation = "https://github.com/hplt-project/opuscleaner#readme"
Issues = "https://github.com/hplt-project/opuscleaner/issues"
Source = "https://github.com/hplt-project/opuscleaner"

[tool.hatch.version]
path = "opuscleaner/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=opuscleaner --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.hatch.build]
include = ["/opuscleaner"]

[tool.hatch.build.targets.sdist.force-include]
"frontend/dist" = "/opuscleaner/frontend"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "utils/frontend_build_hook.py"
working_dir = "frontend"
artifacts = ["frontend/dist"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
all = ["requirements-all.txt"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["opuscleaner/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
